--- a/Samples/WindowPlacement/ConsoleApplication1/FullScreenSample/FullScreenSample.vcxproj
+++ b/Samples/WindowPlacement/ConsoleApplication1/FullScreenSample/FullScreenSample.vcxproj
@@ -9,7 +9,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{04a94fc2-e929-4327-9e0a-f70ef4059773}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>ConsoleApplication1</RootNamespace>
+    <RootNamespace>FullScreenSample</RootNamespace>
     <WindowsTargetPlatformVersion Condition=" '$(WindowsTargetPlatformVersion)' == '' ">10.0.26100.0</WindowsTargetPlatformVersion>
     <WindowsTargetPlatformMinVersion>10.0.17134.0</WindowsTargetPlatformMinVersion>
   </PropertyGroup>
